--- a/style.css
+++ b/style.css
@@ -188,10 +188,10 @@ display: none;
 /* Cancel button styles */
 .cancel-btn {
 display: none; /* Hidden by default */
-background: rgb(92, 146, 234);
+background: rgb(77, 180, 248);
 border: none;
 font-size: 1.5rem; /* Adjust size as needed */
-color: #141516; /* Color of the icon */
+color: #feffff; /* Color of the icon */
 position: absolute;
 top: 10px; /* Adjust top position */
 right: 10px; /* Adjust right position */
@@ -232,7 +232,7 @@ button {
   font-size: 16px;
 }
 button:hover {
-  background-color: #437fda;
+  background-color: #099fcc;
 }
 .footer {
 background: #f8f9fa;
@@ -278,7 +278,7 @@ right: 30px;
 z-index: 99;
 border: none;
 outline: none;
-background-color: #89b6e9;
+background-color: rgb(77, 180, 248);
 color: white;
 cursor: pointer;
 padding: 15px;
@@ -286,7 +286,7 @@ border-radius: 4px;
 }
 
 #myBtn:hover {
-background-color:rgb(84, 140, 237);
+background-color:rgb(11, 160, 241);
 }
 
 /* Close button styling */
